--- a/pelisdb-presentation/pom.xml
+++ b/pelisdb-presentation/pom.xml
@@ -14,10 +14,15 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
-    <!-- ??? dudo -->
+    <!-- actuator -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+    <!-- Doc Rest API -->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-boot-starter</artifactId>
     </dependency>
     <!-- Services -->
     <dependency>
